<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/include_toolbar"
        layout="@layout/general_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/margin_10"
            app:cardElevation="5dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/margin_10">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="@dimen/margin_20"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/medication_desc"
                app:srcCompat="@drawable/ic_pills_three"
                tools:srcCompat="@drawable/ic_pills_three"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/medication_name"
        android:layout_marginTop="@dimen/margin_10"
        android:gravity="center_horizontal"
        android:textSize="@dimen/text_size_18"/>

    <TextView
        android:id="@+id/tv_med_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Para"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_18"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:text="@string/medication_desc"
        android:gravity="center_horizontal"
        android:textSize="@dimen/text_size_18"/>

    <TextView
        android:id="@+id/tv_med_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Para"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_18"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:text="@string/to_be_taken"
        android:gravity="center_horizontal"
        android:textSize="@dimen/text_size_18"/>

    <TextView
        android:id="@+id/tv_med_freq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Para"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/text_size_20"
        android:gravity="center_horizontal"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_18"/>

        </LinearLayout>
        </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/margin_10"
        app:cardElevation="5dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/margin_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarm_time"
                android:textSize="@dimen/text_size_16"
                android:textColor="@color/colorPrimaryLight" />

            <TextView
                android:id="@+id/tv_detail_alarm_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_18"
                android:textStyle="bold"
                tools:text="Panadol" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repeat_alarm"
                    android:textSize="@dimen/text_size_16"
                    android:textColor="@color/colorPrimaryLight" />

                <TextView
                    android:id="@+id/tv_detail_repeat_alarm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_20"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_18"
                    android:textStyle="bold"
                    tools:text="next 6 hours"
                    android:layout_marginLeft="@dimen/margin_20" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_20"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_10">

                <TextView
                    android:id="@+id/tv_start_date_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_date"
                    android:textColor="@color/colorPrimaryLight" />

                <TextView
                    android:id="@+id/tv_start_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_18"
                    android:layout_below="@+id/tv_start_date_label"
                    android:textColor="@color/white"
                    tools:text="April 26, 2018" />

                <TextView
                    android:id="@+id/tv_end_date_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/end_date"
                    android:textColor="@color/colorPrimaryLight" />

                <TextView
                    android:id="@+id/tv_end_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:textSize="@dimen/text_size_18"
                    android:layout_below="@+id/tv_end_date_label"
                    android:textColor="@color/white"
                    tools:text="April 28, 2018" />

            </RelativeLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
    </LinearLayout>
    </ScrollView>
</LinearLayout>
</layout>