<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:id="@+id/ll_edit_profile_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <include
        android:id="@+id/include_toolbar"
        layout="@layout/general_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_10">

        <ImageView
            android:id="@+id/iv_profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            tools:src="@mipmap/ic_launcher"
            android:contentDescription="@string/profile_image"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@+id/iv_profile_image"
            android:layout_toEndOf="@+id/iv_profile_image"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginLeft="@dimen/margin_20">

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Ade Ade"
                android:gravity="center_horizontal"
                android:textSize="@dimen/text_size_18"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="ade@ade.mnet"
                android:gravity="center_horizontal"
                android:textSize="@dimen/text_size_18"/>

        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        android:gravity="center_horizontal"
        android:textSize="@dimen/text_size_16"
        android:background="@color/colorPrimaryLight"
        android:padding="@dimen/margin_2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_20"
        android:paddingStart="@dimen/margin_10"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/margin_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_18"
            android:text="@string/gender"
            android:layout_marginStart="@dimen/margin_30"
            android:layout_marginLeft="@dimen/margin_30" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_marginStart="@dimen/margin_30"
            android:layout_marginEnd="@dimen/margin_30"
            android:background="@drawable/white_gradient_button">
            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/spinner_gender"
                android:layout_width="match_parent"
                android:background="@android:color/transparent"
                app:ms_text_color="@color/colorPrimaryDark"
                app:ms_background_color="@android:color/transparent"
                app:ms_background_selector="@color/white"
                android:layout_height="40dp" />
        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/darkerGray"
        android:textColorHint="@color/darkerGray"
        android:layout_gravity="center"
        android:paddingStart="@dimen/margin_10"
        android:paddingEnd="@dimen/margin_10"
        android:paddingBottom="@dimen/margin_5">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tie_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age"
            android:inputType="number"
            android:gravity="top"
            android:textColorHint="@color/darkerGray"
            app:backgroundTint="@color/colorPrimary" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/darkerGray"
        android:textColorHint="@color/darkerGray"
        android:layout_gravity="center"
        android:paddingStart="@dimen/margin_10"
        android:paddingEnd="@dimen/margin_10"
        android:paddingBottom="@dimen/margin_5">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tie_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:inputType="textMultiLine"
            android:lines="3"
            android:gravity="top"
            android:textColorHint="@color/darkerGray"
            app:backgroundTint="@color/colorPrimary" />
    </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/margin_20"
                android:paddingStart="@dimen/margin_10"
                android:orientation="horizontal"
                android:paddingEnd="@dimen/margin_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_18"
                    android:text="@string/genotype"
                    android:layout_marginStart="@dimen/margin_30"
                    android:layout_marginLeft="@dimen/margin_30" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:layout_marginStart="@dimen/margin_30"
                    android:layout_marginEnd="@dimen/margin_30"
                    android:background="@drawable/white_gradient_button">
                    <com.jaredrummler.materialspinner.MaterialSpinner
                        android:id="@+id/spinner_genotype"
                        android:layout_width="match_parent"
                        android:background="@android:color/transparent"
                        app:ms_text_color="@color/colorPrimaryDark"
                        app:ms_background_color="@android:color/transparent"
                        app:ms_background_selector="@color/white"
                        android:layout_height="40dp" />
                </LinearLayout>

            </LinearLayout>


            <!--<android.support.design.widget.TextInputLayout
                android:id="@+id/til_genotype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/darkerGray"
                android:textColorHint="@color/darkerGray"
                android:layout_gravity="center"
                android:paddingStart="@dimen/margin_10"
                android:paddingEnd="@dimen/margin_10"
                android:paddingBottom="@dimen/margin_5">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tie_genotype"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/genotype"
                    android:inputType="text"
                    android:gravity="top"
                    android:textColorHint="@color/darkerGray"
                    app:backgroundTint="@color/colorPrimary" />
            </android.support.design.widget.TextInputLayout>-->

    <Button
        android:id="@+id/btn_save_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:layout_margin="@dimen/margin_10"
        android:textColor="@color/white"
        android:text="@string/save"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
</layout>